--- a/2.html
+++ b/2.html
@@ -93,6 +93,10 @@
 
         </div>
       </div>
+      <div class="back">
+        <a href="index.html" style="color: #999999;">
+          < Back</a>
+      </div>
     </div>
 
     <!-- Site JavaScript -->
